# redshift-rs

./: Cargo.toml  README.md
src/: colorramp.rs  gamma_method.rs  gamma_randr.rs  location.rs  main.rs  solar.rs  transition.rs
src/gamma/: gamma_randr.rs  mod.rs
src/location/: geoclue2.rs  mod.rs
