[package]
name = "redshift-rs"
version = "0.1.1"
authors = ["Thomas Jespersen <laumann@protonmail.com>"]

[dependencies]
time = "0.1"
chan-signal = "0.2"
chan = "0.1"
clap = "2"

dbus = { version = "0.5", optional = true }

[dependencies.xcb]
version = "0.7"
features = ["randr"]

[features]
geoclue2 = ["dbus"]