[package]
name = "redshift-rs"
version = "0.1.1"
authors = ["Thomas Jespersen <laumann@protonmail.com>"]

[dependencies]
time = "0.1"
clap = "2"
lazy_static = "1"
rust-ini = "0.10"
mio = "0.6.14"

dbus = { version = "0.5", optional = true }

[dependencies.xcb]
version = "0.8"
features = ["randr"]
optional = true

[features]
default = ["randr"]
randr = ["xcb"]
geoclue2 = ["dbus"]
